tests/rosetta/out/Smalltalk/arithmetic-integer-1.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| a b main |
main := [ | a := 12.
b := 8.
Transcript show: ((((((a asString) + ' + ') + (b asString)) + ' = ') + ((a + b) asString))) printString; cr.
Transcript show: ((((((a asString) + ' - ') + (b asString)) + ' = ') + ((a - b) asString))) printString; cr.
Transcript show: ((((((a asString) + ' * ') + (b asString)) + ' = ') + ((a * b) asString))) printString; cr.
Transcript show: ((((((a asString) + ' / ') + (b asString)) + ' = ') + ((a / b) asInteger asString))) printString; cr.
Transcript show: ((((((a asString) + ' % ') + (b asString)) + ' = ') + ((a % b) asString))) printString; cr. ].
main value.
